Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-2064

Incorrect text cursor position after Japanese text insertion

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.8.0
    • 4.4.0, 4.5.0, 4.6.0
    • GUI: Text handling
    • None
    • bcf93f6bcb596c378ae957ccb2b2097fc3de8015

    Description

      Incorrect text cursor position after Japanese text insertion.

      Test case:

      • Execute textedit of qtdemo.
      • Follow the instructions described in the attached picture.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ntg Pierre Rossi
            admin Administrator
            Votes:
            2 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes