Update the text cursor's position for input method events.

Task-number: QTBUG-2064
Reviewed-by: Jiang Jiang